# manu

./: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
configs/: dev.yaml  prod.yaml
src/polymarket_advisor/: __init__.py  main.py
src/polymarket_advisor/api/: __init__.py  app.py  deps.py  router.py
src/polymarket_advisor/api/routes/: __init__.py  advisor.py  health.py  news.py  refresh.py  signals.py
src/polymarket_advisor/api/schemas/: __init__.py  advisor.py  news.py  signals.py
src/polymarket_advisor/chat/: __init__.py  explain.py  orchestrator.py  prompts.py
src/polymarket_advisor/core/: __init__.py  config.py  logging.py  time.py
src/polymarket_advisor/db/: __init__.py  base.py  session.py
src/polymarket_advisor/db/models/: __init__.py  advisor_reco.py  market.py  news_item.py  price.py  signal.py  signal_run.py  token.py
src/polymarket_advisor/db/repos/: __init__.py  advisor_repo.py  market_repo.py  news_repo.py  price_repo.py  signal_repo.py  token_repo.py
src/polymarket_advisor/domain/: __init__.py
src/polymarket_advisor/domain/advisor/: __init__.py  composer.py  rules.py  selector.py
src/polymarket_advisor/domain/scoring/: __init__.py  confidence.py  momentum.py  scoring.py
src/polymarket_advisor/integrations/: __init__.py
src/polymarket_advisor/ml/: __init__.py
src/polymarket_advisor/scheduler/: __init__.py  runner.py  state.py
src/polymarket_advisor/services/: __init__.py  advisor.py
tests/: conftest.py  test_api.py  test_signals.py
(+27 files in other folders)
